@@ -8,13 +8,13 @@ DIST pyusb-1.0.0a3.zip 58508 SHA256 462a13714f8d32daa455c5dbd5c53704c39544d338bd
 EBUILD pyusb-0.4.2.ebuild 815 SHA256 c7a4ae5b94dda51720a918c10dd2087a57487417c4fbe103bff7201af30290f2 SHA512 f9ff33a1cdb86228fba3a9bcfd99eb6b6f3d82de08740c59661436534b38d3008434bd9a9a5d8d6fddec5a3f3133c0803fbef54686195ee1b675ffe2fa7a1c5a WHIRLPOOL d37853d993de4ff4876423d6864940d748368f04da6e90c291c45975f2512ee3a89b05e5b4d6df94dc73402691c58c420dc695bb25c06474f413fc69ae47e70b
 EBUILD pyusb-0.4.3.ebuild 816 SHA256 e7610ba0200d9f78951bbbb41baf94ca0aca9abfd7596987ed28491c2eaac88e SHA512 b88076b05ad88b091d7a8e8f40392afe9522cf8d4ab106bd15e1af7dc3a91afaea8abc4d495b1d34bff499a52df74f1a5a637f7e90332333867c3410e52e68c4 WHIRLPOOL 5fea60b0494d14adf63d9848b3ec30d849373b0d00f59a6df5b43f06b7eabd6124c754fd09a0effe9328a346b8ec5f3d618a9eb34adfbfbb586c417c393949d5
 EBUILD pyusb-1.0.0_alpha1.ebuild 856 SHA256 0f2fc41a5c9e4494e22b4a7cd6c3ecd9bf4f8c0fa36be787222321e41c35da86 SHA512 7aeb09d223a6ef5d86cc9adfef3608056974a6d5ea6faaef2b73526d3f365d5d8be98418658e4a29c5e1cee661cd2559bf25657e137464add0aaed6bf1f43f6f WHIRLPOOL 8caa99bda9b6d62221be7a054ef91a494ff1db4c83f1d4464bbfbb8f2c0d7c0d4957e7e06184fb90bb640e2ada1e739c4d5e056e59ed93af2450fc8ce39e4bbe
-EBUILD pyusb-1.0.0_alpha3.ebuild 772 SHA256 5c312765bdc3e579cff2c4cff53518887d1597c48b3d079b40cfd47746dfbf95 SHA512 c5d28fa01708450f46e89955f7b82b593872d669d16f7dde95ea61c61f9f8d914f73819df8dfd42a9327e4cd284a11fbbc765dd55af1ed34d6898d039d41a190 WHIRLPOOL f76e777684bb4011e007457c7dd181e9fb4822cee7087c84eb4c9a862c16401d24835ad2b1a229e86104840489410afb3baaea8e0c9d108762e205abcde0b631
-MISC ChangeLog 1666 SHA256 e7c59207171457da2050e8f56a476dde4f7af61bc1603f9eacffb36c63849c86 SHA512 d3156f7332dc8eb1c9d01b489ad85cdfae73ca546c7e0242ae476044ea083472a9ccb3154e14b77b553be110853886ff9cc3d4360364a812cd51f47876134045 WHIRLPOOL f734fb3bbe214e82497f3650da3a1657c2c5a9aa172c0c5df3b230e18fef240622caf815a44f7c2e6654995b88f88140e43a84618afdc07df80b2e017c0b93d8
+EBUILD pyusb-1.0.0_alpha3.ebuild 789 SHA256 d5e60b1d5ebfbe21684b508a520ba10fb4f05163aa05f5150e560bf2efdd2390 SHA512 9966f56875edf804616c370cf241de3a9b4be5945c91a2046f963dad9e03099d6af5aa4c500ecdaf412f457f0fde2876db7bd2c1124bf59103d61dd9fa819f4c WHIRLPOOL 3973a0dd40d35b90a5c05cda80ade41a157974ee37d8ee9e8661903105e7f975d41cd38c33767ce138b4810861d888ca20c2241770d530377d52563eb3875dc8
+MISC ChangeLog 1798 SHA256 1e6a615e88a39c25ac2c4a8e9687ffcd6b4676730d81521886bf06a74e74a4ba SHA512 53c45c0b0013fe93d3258b16fceefd7cc891c7192f9d383f90a734f65fb81ebfcc0c55908f86fd41c36ce5ba76e5972ebc431f0cb4551c7a970f4b34eb4548a5 WHIRLPOOL 2520794cd8506997d835049031f8c9c896c2a3d5b1d58c82b26b01012b6f7d84eac932544a52aab7f91fd4cf8fac7a2a404fc20215dc318e31226d9a7ada9f8b
 MISC metadata.xml 357 SHA256 631293b22cbe389bacbfbe82a0606408a21ed6da024a11e121c2e0cf105affde SHA512 a58650fae61290da2bf1e20e2d06bb42db5885d0c87754884f893e0e26eaabd4fb75e99328c3dd08bce4969c14e9268afbf832da1636319e90b78bb4115573b8 WHIRLPOOL f86dc72806007479af2f226f08bcee1bcc469efcf85ac5538e75f2d7ea12238cda719c74c0125788730bd6b3d750f75ea1a7be12a14224c5c32c65b1db3cc240
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEAREIAAYFAlDooY4ACgkQso7CE7gHKw2ezwCdH5qryRyDtmenEGRjMZpRdi98
-qtgAoKgX+0NZ26FLTuprgYuxDoqWa4gj
-=IlGm
+iEYEAREIAAYFAlDqEhkACgkQso7CE7gHKw3D9wCgxmzUqXHjBkLIov/b+CGwZoRJ
+XKsAn3l0UQMcZn/wcBT/KmxnxmLo84+2
+=L5Wb
 -----END PGP SIGNATURE-----
