@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/pyusb
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/pyusb/ChangeLog,v 1.11 2013/01/05 05:58:05 idella4 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/pyusb/ChangeLog,v 1.12 2013/01/06 08:10:32 idella4 Exp $
+
+  07 Jan 2013; Ian Delaney <idella4@gentoo.org> pyusb-1.0.0_alpha3.ebuild:
+  Added unzip to DEPEND, picked up and thx to Arferever
 
 *pyusb-1.0.0_alpha3 (05 Jan 2013)
 
